cargo-features = ["codegen-backend"]
[package]
name = "hos_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
image = "0.24"
sixel = "0.4"

[profile.dev]
codegen-backend = "cranelift"

[profile.dev.package."*"]
codegen-backend = "llvm"